# slurm-wrapper

./: .sb  README.md  hello.py  pyproject.toml  slurm_wrapper.py  test_slurm_wrapper.py
slurm_wrapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
