[project]
name = "slurm-wrapper"
version = "0.1.0"
description = "Simple CLI wrapper for Slurm sbatch."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.4",
    "toml>=0.10.2",
]

[project.scripts]
sb = "slurm_wrapper:main"

[tool.setuptools]
py-modules = ["slurm_wrapper"]
